<resources>
    <string name="app_name">Plan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Navigation Drawer-->
    <string name="nav_today">To day</string>
    <string name="nav_up_comming">Up coming</string>
    <string name="nav_important">Important</string>
    <string name="nav_up_history">History</string>

    <!--Add plan dialog-->
    <string name="add_plan_title">Add Plan</string>
    <string name="add_plan_btn_done">DONE</string>
    <string name="add_plan_btn_cancel">CANCEL</string>
    <string name="add_plan_name_exist">Empty name or name already exist.</string>

    <!--Toast-->
    <string name="add_plan_error_string">Enter your plan name</string>


    <!--Bottom sheet add task-->
    <string name="add_task_edt_hide">Name new task</string>
    <string name="add_to_list">ADD TO LIST...</string>
    <string name="remind_me">REMIND ME</string>
    <string name="repeat_me">REPEAT_ME</string>


    <!--Choose date time dialog-->
    <string name="choose_time_dialog_title">Choose time</string>
    <string name="choose_date_dialog_title">Choose date</string>
    <string name="choose_date_time_cancel">CANCEL</string>
    <string name="choose_date_time_done">DONE</string>

    <!--Choose date repeat-->
    <string name="choose_day_repeat_title">Choose Day Repeat</string>
    <string name="choose_day_none">NONE</string>
    <string name="choose_day_monday">Mon</string>
    <string name="choose_day_tueday">Tue</string>
    <string name="choose_day_wednesday">Wed</string>
    <string name="choose_day_thursday">Thurs</string>
    <string name="choose_day_friday">Fri</string>
    <string name="choose_day_saturday">Sat</string>
    <string name="choose_day_sunday">Sun</string>



</resources>
