<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="arr_selected"
            type="int[]" />

        <variable
            name="handleClick"
            type="com.example.plan.ui.dialog.ChooseDayRepeat" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@{arr_selected[0] == 1 ? @drawable/circle_bg_select :  @drawable/circle_bg_not_select}"
                android:gravity="center"
                android:onClick="@{handleClick.onClick(0)}"
                android:text="@string/choose_day_none" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@{arr_selected[1] == 1 ? @drawable/circle_bg_select :  @drawable/circle_bg_not_select}"
                android:gravity="center"
                android:text="@string/choose_day_monday" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@{arr_selected[2] == 1 ? @drawable/circle_bg_select :  @drawable/circle_bg_not_select}"
                android:gravity="center"
                android:text="@string/choose_day_tueday" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg_select"
                android:gravity="center"
                android:text="@string/choose_day_wednesday" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg_select"
                android:gravity="center"
                android:text="@string/choose_day_thursday" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg_select"
                android:gravity="center"
                android:text="@string/choose_day_friday" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg_select"
                android:gravity="center"
                android:text="@string/choose_day_saturday" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg_select"
                android:gravity="center"
                android:text="@string/choose_day_saturday" />
        </LinearLayout>
    </LinearLayout>
</layout>